--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
     <application
         android:name=".ParseApplication"
         android:allowBackup="true"
-        android:icon="@drawable/instagram_launcher_icon"
-        android:label="@string/app_name"
+        android:icon="@drawable/nux_dayone_landing_logo"
+        android:label="Instagram"
         android:roundIcon="@drawable/instagram_launcher_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.Instagram">
